# Stanford-RNA-3D-Folding

./: Makefile  README.md  main.py  pyproject.toml
src/data/: make_dataset.py
src/features/: build_features.py
src/models/: evaluate_model.py  predict_model.py  train_model.py
src/visualization/: visualize.py
