[project]
name = "stanford-rna-3d-folding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pramit Gopal Yeole", email = "pramit998@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]
